Fix sustainble image width on tablet screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ header {
 
 .sustainable-container {
     height: 100%;
+    width: 100%;
     overflow: hidden;
 }
 
